other services file

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -261,7 +261,7 @@ hr {
 #testimonials p span a:hover {
 	color: #2c9688;
 }
-/** Chefs, Foods Dive Sites **/
+/** Chefs, Foods Sites **/
 #chefs, #foods, #sites {
 	list-style: none;
 	margin: 0;
